<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true" >

    <android.support.constraint.Guideline
        android:id="@+id/guideline_profile_image_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.105"
        android:orientation="horizontal" />

    <de.griot_app.griot.views.ProfileImageView
        android:id="@+id/piv_profile_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="@id/guideline_profile_image_top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline_profile_image_bottom"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_profile_image_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.279"
        android:orientation="horizontal" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.12"
        android:orientation="vertical" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.88"
        android:orientation="vertical" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.31" />

    <EditText
        android:id="@+id/editText_firstname"
        style="@style/AppTheme.EditTextStyle"
        android:background="@drawable/shape_rect_rounded_border"
        android:hint="@string/hint_firstname"
        android:inputType="textCapWords"
        android:imeOptions="actionNext"
        android:selectAllOnFocus="true"
        app:layout_constraintTop_toTopOf="@+id/guideline_top"
        app:layout_constraintLeft_toLeftOf="@id/guideline_left"
        app:layout_constraintRight_toRightOf="@id/guideline_right"
        app:layout_constraintBottom_toTopOf="@+id/editText_lastname"
        app:layout_constraintVertical_chainStyle="spread_inside"/>

    <EditText
        android:id="@+id/editText_lastname"
        style="@style/AppTheme.EditTextStyle"
        android:background="@drawable/shape_rect_rounded_border"
        android:hint="@string/hint_lastname"
        android:inputType="textCapWords"
        android:imeOptions="actionDone"
        android:selectAllOnFocus="true"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_firstname"
        app:layout_constraintLeft_toLeftOf="@id/guideline_left"
        app:layout_constraintRight_toRightOf="@id/guideline_right"
        app:layout_constraintBottom_toTopOf="@+id/textView_birthday"/>


    <TextView
        android:id="@+id/textView_birthday"
        style="@style/AppTheme.Text_Normal"
        android:text="@string/text_birthday"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_lastname"
        app:layout_constraintLeft_toLeftOf="@id/guideline_left"
        app:layout_constraintBottom_toTopOf="@+id/editText_email"/>

    <ImageView
        android:id="@+id/button_datepicker"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:srcCompat="@drawable/calendar"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/textView_birthday"
        app:layout_constraintLeft_toRightOf="@+id/textView_birthday"
        app:layout_constraintBottom_toBottomOf="@id/textView_birthday"/>

    <TextView
        android:id="@+id/textView_date"
        style="@style/AppTheme.Text_Normal"
        android:text="@string/date_empty"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_birthday"
        app:layout_constraintRight_toRightOf="@id/guideline_right" />

    <EditText
        android:id="@+id/editText_email"
        style="@style/AppTheme.EditTextStyle"
        android:background="@drawable/shape_rect_rounded_border"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_birthday"
        app:layout_constraintLeft_toLeftOf="@id/guideline_left"
        app:layout_constraintRight_toRightOf="@id/guideline_right"
        app:layout_constraintBottom_toTopOf="@+id/editText_password"/>

    <EditText
        android:id="@+id/editText_password"
        style="@style/AppTheme.EditTextStyle"
        android:background="@drawable/shape_rect_rounded_border"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:imeOptions="actionNext"
        app:layout_constraintTop_toBottomOf="@+id/editText_email"
        app:layout_constraintLeft_toLeftOf="@id/guideline_left"
        app:layout_constraintRight_toRightOf="@id/guideline_right"
        app:layout_constraintBottom_toTopOf="@+id/editText_password2"/>

    <EditText
        android:id="@+id/editText_password2"
        style="@style/AppTheme.EditTextStyle"
        android:background="@drawable/shape_rect_rounded_border"
        android:hint="@string/hint_password_repeat"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        app:layout_constraintTop_toBottomOf="@+id/editText_password"
        app:layout_constraintLeft_toLeftOf="@id/guideline_left"
        app:layout_constraintRight_toRightOf="@id/guideline_right"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
        app:layout_constraintVertical_chainStyle="spread_inside"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.673"
        android:orientation="horizontal" />

    <Button
        android:id="@+id/button_save"
        style="@style/AppTheme.TextButtons"
        android:text="@string/button_save"
        android:paddingTop="15dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingBottom="15dp"
        app:layout_constraintTop_toTopOf="@+id/guideline_bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <include layout="@layout/activity_base_input_griot"/>

</android.support.constraint.ConstraintLayout>